filtered user array is being passed to the background view controller.

--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -50,6 +50,9 @@
                                                                         <state key="normal" title="Asian">
                                                                             <color key="titleColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                         </state>
+                                                                        <connections>
+                                                                            <action selector="asianRaceButtonPressed:" destination="BaY-7o-22m" eventType="touchUpInside" id="MDb-rm-f7q"/>
+                                                                        </connections>
                                                                     </button>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KnV-zn-ucp">
                                                                         <rect key="frame" x="67" y="0.0" width="65.5" height="40"/>
@@ -57,6 +60,9 @@
                                                                         <state key="normal" title="Black">
                                                                             <color key="titleColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                         </state>
+                                                                        <connections>
+                                                                            <action selector="blackRaceButtonPressed:" destination="BaY-7o-22m" eventType="touchUpInside" id="kTu-9M-B3n"/>
+                                                                        </connections>
                                                                     </button>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nC9-6c-8Yq">
                                                                         <rect key="frame" x="135" y="0.0" width="65" height="40"/>
@@ -64,6 +70,9 @@
                                                                         <state key="normal" title="Latino">
                                                                             <color key="titleColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                         </state>
+                                                                        <connections>
+                                                                            <action selector="latinoRaceButtonPressed:" destination="BaY-7o-22m" eventType="touchUpInside" id="Pym-iI-KN2"/>
+                                                                        </connections>
                                                                     </button>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vwi-jJ-qZm">
                                                                         <rect key="frame" x="202" y="0.0" width="65.5" height="40"/>
@@ -71,6 +80,9 @@
                                                                         <state key="normal" title="White">
                                                                             <color key="titleColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                                                                         </state>
+                                                                        <connections>
+                                                                            <action selector="whiteRaceButtonPressed:" destination="BaY-7o-22m" eventType="touchUpInside" id="MSe-tz-H0h"/>
+                                                                        </connections>
                                                                     </button>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rtt-1Q-Gbr">
                                                                         <rect key="frame" x="269" y="0.0" width="65.5" height="40"/>
@@ -78,6 +90,9 @@
                                                                         <state key="normal" title="All">
                                                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                         </state>
+                                                                        <connections>
+                                                                            <action selector="allRaceButtonPressed:" destination="BaY-7o-22m" eventType="touchUpInside" id="2V4-Kg-t0m"/>
+                                                                        </connections>
                                                                     </button>
                                                                 </subviews>
                                                                 <constraints>
@@ -441,6 +456,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AiA-92-q2f">
                                 <rect key="frame" x="331" y="627" width="34" height="30"/>
                                 <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="save:" destination="BaY-7o-22m" eventType="touchUpInside" id="Gti-wg-Vi5"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
